k8s/traefik-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
spec:
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik
