k8s/hotrod-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hotrod
  namespace: default
spec:
  routes:
  - match: Host(`app.punkerside.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: hotrod
      port: 8080
